--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,22 +5,61 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #fefefe;
+    --foreground: #ffffff;
   }
 }
 
-body {
+/* body {
   background: var(--background);
   color: var(--foreground);
+} */
+body {
+  background: #0f0f0f;
+  min-height: 100vh;
+  overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
+  color: var(--background);
+}
+
+body::before, body::after {
+  content: "";
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  filter: blur(120px);
+  z-index: -1;
+}
+
+body::before {
+  background: #ff6ec7;
+  top: -100px;
+  left: -100px;
+}
+
+body::after {
+  background: #4facfe;
+  bottom: -100px;
+  right: -100px;
+}
+@keyframes gradient-move {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.animate-gradient {
+  background-size: 200% 200%;
+  animation: gradient-move 5s ease infinite;
+}
+.glass{
+  background: rgba(255, 255, 255, 0.15); /* полупрозрачный белый */
+  backdrop-filter: blur(20px) saturate(180%);
+  -webkit-backdrop-filter: blur(20px) saturate(180%);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  
 }
