feat | new color app

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,59 +1,48 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --gray-rabbit: #6D6D71;   /* Серый кролик */
+  --beige-gray: #E3E3DB;    /* Мягкий серо-бежевый */
+  --magic-black: #373A3E;   /* Магический чёрный */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #fefefe;
-    --foreground: #ffffff;
-  }
+  --gray-rabbit: #6D6D71;   /* Серый кролик */
+  --beige-gray: #E3E3DB;    /* Мягкий серо-бежевый */
+  --magic-black: #373A3E;   /* Магический чёрный */
+}
 }
 
 /* body {
   background: var(--background);
   color: var(--foreground);
 } */
+.gray-rabbit{
+  color: #6D6D71;
+}
+
+.magic-black{
+  color: #373A3E;
+}
+.beige-gray{
+  color: #E3E3DB;
+}
+.bg-gray-rabbit{
+  background-color: #6D6D71;
+}
+.bg-magic-black{
+  background-color: #373A3E;
+}
+.bg-beige-gray{
+  background-color: #E3E3DB;
+}
 body {
-  background: #0f0f0f;
+  background: var(--gray-rabbit);
   min-height: 100vh;
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--background);
-}
-
-body::before, body::after {
-  content: "";
-  position: absolute;
-  width: 400px;
-  height: 400px;
-  border-radius: 50%;
-  filter: blur(120px);
-  z-index: -1;
-}
-
-body::before {
-  background: #ff6ec7;
-  top: -100px;
-  left: -100px;
-}
-
-body::after {
-  background: #4facfe;
-  bottom: -100px;
-  right: -100px;
-}
-@keyframes gradient-move {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-
-.animate-gradient {
-  background-size: 200% 200%;
-  animation: gradient-move 5s ease infinite;
+  color: var(--magic-black);
 }
 
 /* 🌫 Базовый стеклянный блок */
